2006-06-24  Jim Hyslop <jhyslop@dreampossible.ca>

	* sign.c, verify.c: back out "b" changes made earlier today - not
	supported by popen on other platforms.

	* diff.c: use unlink_file instead of CVS_UNLINK (which resolves to
	unlink) because on Windows, unlink doesn't remove read-only files.

	* sign.c, subr.c, verify.c: add "b" (binary) flag to open the files
	and pipes in binary mode (on Windows, CRLF translation really confuses
	gpg).

2006-06-22  Larry Jones  <lawrence.jones@ugs.com>

	* mkmodules.c (modules_contents): Remove defunct -i option.

2006-06-21  Larry Jones  <lawrence.jones@ugs.com>

	* client.c: Remove unused global variable last_merge_no_change.
	(send_modified): Cast first arg of send_to_server() to correct type.
	* rcs.c (expand_keywords, RCS_delete_openpgp_signatures): Remove
	unused variables.
	* server.c (do_cvs_command): Remove unused variables.
	* verify.c (iget_verify_commits): Return a valid value in client mode.
	(verify_fileproc): Remove unused variables.

2006-06-20  Derek Price  <derek@ximbiot.com>

	* sanity.sh (require_rsh): Process STDERR output from remote shell.

2006-06-17  Mark D. Baushke  <mdb@gnu.org>

	* rcs.c (RCS_add_openpgp_signature): Fix signatures on deltas that
	do not have any other_delta records.
	* sanity.sh (openpgp): Test that it works.
	
2006-06-16  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (expr_set_DASHDASH): Fix for non-POSIX expr
	implementations.

2006-06-15  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (conflicts4): Use $SECONDARY_CVSROOT_DIRNAME where
	needed for $proxy testing.

	* sanity.sh: Determine if the expr to be used will be confused
	by 'expr "-rw-rw-r--" : "-rw-rw-r--"' and if so, try the POSIX
	mechanism of a '--' argument to terminate argument processing
	by using 'expr -- "-rw-rw-r--" : "-rw-rw-r--"' as a workaround.

2006-06-13  Derek Price  <derek@ximbiot.com>

	* admin.c (wescape): Suppress compiler warning.

2006-06-12  Jim Hyslop <jhyslop@dreampossible.ca>
